ver 0.21.23 (not yet released)
* storage
  - curl: fix corrupt "href" values in the presence of XML entities
  - curl: unescape "href" values
* output
  - alsa: implement channel mapping for 5.0 and 7.0
* player
  - drain outputs at end of song in "single" mode

ver 0.21.22 (2020/04/02)
* database
  - simple: optimize startup
* input
  - curl: fix streaming errors on Android
* playlist
  - rss: support MIME type application/xml
* mixer
  - android: new mixer plugin for "sles" output
* Android
  - TV support
* Windows
  - fix time zone offset check
* fix build failures with uClibc-ng

ver 0.21.21 (2020/03/19)
* configuration
  - fix bug in "metadata_to_use" setting
* playlist
  - asx, xspf: fix corrupt tags in the presence of XML entities
* archive
  - iso9660: skip empty file names to work around libcdio bug
* decoder
  - gme: ignore empty tags
* output
  - solaris: port to NetBSD
* raise default "max_connections" value to 100

ver 0.21.20 (2020/02/16)
* decoder
  - audiofile, ffmpeg, sndfile: handle MIME type "audio/wav"
  - ffmpeg: fix playback of AIFF and TTA
  - vorbis, opus: fix seeking in small files
* fix backwards seeking on ARM (and other non-x86 CPUs)

ver 0.21.19 (2020/01/17)
* configuration
  - allow overriding top-level settings in includes
* output
  - pulse: obey Pulse's maximum sample rate (fixes DSD128 playback)
* fix build failure with clang 10
* fix build failure with Android NDK r20

ver 0.21.18 (2019/12/24)
* protocol
  - work around Mac OS X bug in the ISO 8601 parser
* output
  - alsa: fix hang bug with ALSA "null" outputs
* storage
  - curl: fix crash bug
* drop support for CURL versions older than 7.32.0
* reduce unnecessary CPU wakeups

ver 0.21.17 (2019/12/16)
* protocol
  - relax the ISO 8601 parser: allow omitting field separators, the
    time of day and the "Z" suffix
* archive
  - zzip: improve error reporting
* outputs
  - jack: mark ports as terminal
  - shout: declare metadata as UTF-8
* fix build failure with -Ddatabase=false
